# python-openstack-odooclient

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml  versions.json
.github/ISSUE_TEMPLATE/: bug-report.md  release.md
.github/workflows/: main.yml  release.yml  tag.yml  test.yml
0.1.0/: 404.html  changelog.html  index.html  performance.html  sitemap.xml
0.1.0/managers/: account-move-line.html  account-move.html  company.html  credit-transaction.html  credit-type.html  credit.html  currency.html  custom.html  customer-group.html  grant-type.html  grant.html  index.html  partner-category.html  partner.html  pricelist.html  product-category.html  product.html  project-contact.html  project.html  referral-code.html  reseller-tier.html  reseller.html  sale-order-line.html  sale-order.html  support-subscription-type.html  support-subscription.html  tax-group.html  tax.html  term-discount.html  trial.html  uom-category.html  uom.html  user.html  volume-discount-range.html  voucher-code.html
0.2.1/: 404.html  changelog.html  index.html  performance.html  sitemap.xml
0.2.1/managers/: account-move-line.html  account-move.html  attachment.html  company.html  credit-transaction.html  credit-type.html  credit.html  currency.html  custom.html  customer-group.html  grant-type.html  grant.html  index.html  partner-category.html  partner.html  pricelist.html  product-category.html  product.html  project-contact.html  project.html  referral-code.html  reseller-tier.html  reseller.html  sale-order-line.html  sale-order.html  support-subscription-type.html  support-subscription.html  tax-group.html  tax.html  term-discount.html  trial.html  uom-category.html  uom.html  user.html  volume-discount-range.html  voucher-code.html
0.2.1/search/: search_index.json
0.2.2/: 404.html  changelog.html  index.html  performance.html  sitemap.xml
0.2.2/managers/: account-move-line.html  account-move.html  attachment.html  company.html  credit-transaction.html  credit-type.html  credit.html  currency.html  custom.html  customer-group.html  grant-type.html  grant.html  index.html  partner-category.html  partner.html  pricelist.html  product-category.html  product.html  project-contact.html  project.html  referral-code.html  reseller-tier.html  reseller.html  sale-order-line.html  sale-order.html  support-subscription-type.html  support-subscription.html  tax-group.html  tax.html  term-discount.html  trial.html  uom-category.html  uom.html  user.html  volume-discount-range.html  voucher-code.html
0.2.2/search/: search_index.js  search_index.json
0.2.3/: 404.html  changelog.html  index.html  performance.html  sitemap.xml
0.2.3/managers/: account-move-line.html  account-move.html  attachment.html  company.html  credit-transaction.html  credit-type.html  credit.html  currency.html  custom.html  customer-group.html  grant-type.html  grant.html  index.html  partner-category.html  partner.html  pricelist.html  product-category.html  product.html  project-contact.html  project.html  referral-code.html  reseller-tier.html  reseller.html  sale-order-line.html  sale-order.html  support-subscription-type.html  support-subscription.html  tax-group.html  tax.html  term-discount.html  trial.html  uom-category.html  uom.html  user.html  volume-discount-range.html  voucher-code.html
0.2.3/search/: search_index.js
0.2.4/: 404.html  changelog.html  index.html  performance.html  sitemap.xml
0.2.4/managers/: account-move-line.html  account-move.html  attachment.html  company.html  credit-transaction.html  credit-type.html  credit.html  currency.html  custom.html  customer-group.html  fiscal-position-tax-mapping.html  fiscal-position.html  grant-type.html  grant.html  index.html  partner-category.html  partner.html  pricelist.html  product-category.html  product.html  project-contact.html  project.html  referral-code.html  reseller-tier.html  reseller.html  sale-order-line.html  sale-order.html  support-subscription-type.html  support-subscription.html  tax-group.html  tax.html  term-discount.html  trial.html  uom-category.html  uom.html  user.html  volume-discount-range.html  voucher-code.html
0.2.4/search/: search_index.js
0.2.5/: 404.html  changelog.html  index.html  performance.html  sitemap.xml
0.2.5/managers/: account-move-line.html  account-move.html  attachment.html  company.html  credit-transaction.html  credit-type.html  credit.html  currency.html  custom.html  customer-group.html  fiscal-position-tax-mapping.html  fiscal-position.html  grant-type.html  grant.html  index.html  partner-category.html  partner.html  pricelist.html  product-category.html  product.html  project-contact.html  project.html  referral-code.html  reseller-tier.html  reseller.html  sale-order-line.html  sale-order.html  support-subscription-type.html  support-subscription.html  tax-group.html  tax.html  term-discount.html  trial.html  uom-category.html  uom.html  user.html  volume-discount-range.html  voucher-code.html
0.2.5/search/: search_index.js  search_index.json
changelog.d/: 1.added.md  11.added.md  12.added.md  12.fixed.md  13.changed.md  14.fixed.md  22.added.md  25.added.md  28.fixed.md  4.removed.md  8.added.md  python-3.8-3.9-support.removed.md
develop/: 404.html  changelog.html  index.html  performance.html  sitemap.xml
develop/managers/: account-move-line.html  account-move.html  attachment.html  company.html  credit-transaction.html  credit-type.html  credit.html  currency.html  custom.html  customer-group.html  fiscal-position-tax-mapping.html  fiscal-position.html  grant-type.html  grant.html  index.html  partner-category.html  partner.html  pricelist.html  product-category.html  product.html  project-contact.html  project.html  referral-code.html  reseller-tier.html  reseller.html  sale-order-line.html  sale-order.html  support-subscription-type.html  support-subscription.html  tax-group.html  tax.html  term-discount.html  trial.html  uom-category.html  (+4 more)
docs/: changelog.md  index.md  performance.md
openstack_odooclient/: __init__.py  client.py  exceptions.py  util.py
(+106 files in other folders)
