[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "openstack-odooclient"
authors = [
    {name = "Callum Dickinson", email = "callum.dickinson@catalystcloud.nz"},
]
description = "Python client library for Odoo and the OpenStack integration add-on."
readme = "README.md"
keywords = [
    "openstack",
    "odoo",
    "erp",
    "billing",
]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "OdooRPC>=0.9.0",
    "packaging",
    "typing-extensions>=4.15.0",
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "mike>=2.1.2",
    "mkdocs-material>=9.5.27",
    "mypy==1.18.2",
    "poethepoet>=0.37.0",
    "ruff==0.14.0",
    "towncrier>=23.11.0",
]

[project.urls]
Homepage = "https://catalyst-cloud.github.io/python-openstack-odooclient"
Documentation = "https://catalyst-cloud.github.io/python-openstack-odooclient"
Repository = "https://github.com/catalyst-cloud/python-openstack-odooclient"
Issues = "https://github.com/catalyst-cloud/python-openstack-odooclient/issues"
Changelog = "https://catalyst-cloud.github.io/python-openstack-odooclient/latest/changelog.html"

[tool.setuptools]
packages = ["openstack_odooclient"]

[tool.setuptools_scm]

[tool.poe.tasks]
lint = "ruff check"
format = "ruff format"
type-check = "mypy openstack_odooclient"

[tool.ruff]
fix = true
indent-width = 4
line-length = 79
output-format = "grouped"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
    "A",
    "B",
    "BLE",
    "E",
    "F",
    "G",
    "I",
    "INP",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "PTH",
    "RUF",
    "S",
    "T10",
    "T20",
    "W",
    "YTT",
]
extend-select = [
    # COM812 is currently disabled due to a conflict with the Ruff formatter.
    # https://github.com/astral-sh/ruff/issues/9216
    # TODO(callumdickinson): Decide whether to enable or remove.
    # "COM812",
    "COM818",
    "UP009",
]
extend-ignore = [
    "A003",
    "B023",
    "N805",
    "N806",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "RUF012",
]

[tool.ruff.lint.isort]
lines-between-types = 1
combine-as-imports = true
required-imports = [
    "from __future__ import annotations",
]

[tool.mypy]
pretty = true

[tool.towncrier]
directory = "changelog.d"
filename = "docs/changelog.md"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
title_format = "## [{version}](https://github.com/catalyst-cloud/python-openstack-odooclient/releases/tag/{version}) - {project_date}"
issue_format = "[#{issue}](https://github.com/catalyst-cloud/python-openstack-odooclient/pull/{issue})"

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true
